Fix event date aligning issues

--- a/sites/all/themes/bootsass/sass/custom/_landing.scss
+++ b/sites/all/themes/bootsass/sass/custom/_landing.scss
@@ -768,6 +768,10 @@ body.mises-daily {
   }
 }
 
+.group-date-location .date-display-range {
+  display: inline;
+}
+
 @media (max-width: 480px) {
   .node-teaser .panel-body .group-left {
     margin-bottom: 20px;
